# supabase-py

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMO_USAR_ERP.md  CONTRIBUTING.md  DVSYSTEM.lnk  Descp.md  Dockerfile  LICENSE  LIFESVIBE_SETUP_GUIDE.md  MAINTAINERS.md  Makefile  NEW_CONTRIBUTION.md  README.md  README_swebench.md  RELATORIO_ANALISE_PROJETO.md  Scripting.ipynb  backup.py  backup.sh  backup_clientes.json  backup_clientes_utf8.json  backup_clientes_utf8_nobom.json  backup_dados.json  backup_produtos.json  backup_produtos_utf8.json  backup_produtos_utf8_nobom.json  backup_vendedores.json  bug_patch.diff  cli_scripts.py  criar_atalho_desktop.py  data.json  db.sqlite3  db_antigo.sqlite3  diagnostico_sistema.py  docker-compose.yml  (+47 more)
src/auth/: CHANGELOG.md  MAINTAINERS.md  Makefile  README.md  conftest.py  pyproject.toml
src/auth/.devcontainer/: devcontainer.json
src/auth/docs/source/: conf.py  gotrue.rst  index.rst  modules.rst
src/auth/docs/source/api/: api.rst  client.rst  index.rst
src/auth/docs/source/examples/: index.rst  metadata_update.rst
src/auth/infra/: docker-compose.yml
src/auth/infra/db/: 00-schema.sql
src/auth/scripts/: gh-download.py  run-unasync.py
src/auth/src/auth/: CHANGELOG.md
src/auth/src/supabase_auth/: __init__.py  admin_api.py  client.py  constants.py  errors.py  helpers.py  mfa.py  session.py  timer.py  types.py  version.py
src/auth/src/supabase_auth/_async/: gotrue_admin_api.py  gotrue_admin_oauth_api.py  gotrue_base_api.py  gotrue_client.py  storage.py
src/auth/src/supabase_auth/_sync/: gotrue_admin_api.py  gotrue_admin_oauth_api.py  gotrue_base_api.py  gotrue_client.py  storage.py
src/auth/tests/: conftest.py  test_constants.py  test_helpers.py
src/auth/tests/_async/: clients.py  conftest.py  test_gotrue.py  test_gotrue_admin_api.py  test_utils.py  utils.py
src/auth/tests/_sync/: clients.py  conftest.py  test_gotrue.py  test_gotrue_admin_api.py  test_utils.py  utils.py
src/functions/: CHANGELOG.md  Makefile  README.md  conftest.py  diff.diff  pyproject.toml  run-unasync.py
src/functions/src/functions/: CHANGELOG.md
src/functions/src/supabase_functions/: __init__.py  client.py  errors.py  utils.py  version.py
src/functions/src/supabase_functions/_async/: functions_client.py
src/functions/src/supabase_functions/_sync/: functions_client.py
src/functions/tests/: test_client.py  test_errors.py  test_utils.py
src/functions/tests/_async/: test_function_client.py
src/functions/tests/_sync/: test_function_client.py
src/postgrest/: CHANGELOG.md  Makefile  README.md  VERIFICATION-1443.md  pyproject.toml  run-unasync.py
src/postgrest/.devcontainer/: Dockerfile  devcontainer.json
src/postgrest/docs/: conf.py  index.rst  requirements.txt
src/postgrest/docs/api/: client.rst  exceptions.rst  filters.rst  index.rst  request_builders.rst  responses.rst  types.rst
src/postgrest/docs/examples/: basic_queries.rst  index.rst  logging.rst
src/postgrest/infra/: docker-compose.yaml  init.sql
src/postgrest/src/postgrest/: CHANGELOG.md  __init__.py  base_client.py  base_request_builder.py  client.py  constants.py  exceptions.py  request_builder.py  types.py  utils.py  version.py
src/postgrest/src/postgrest/_async/: client.py  request_builder.py
src/postgrest/src/postgrest/_sync/: client.py  request_builder.py
src/postgrest/tests/: test_filter_builder.py  test_immutability.py  test_issue_1207.py  test_typed_dict_insert.py  test_types.py  test_utils.py
src/postgrest/tests/_async/: client.py  conftest.py  test_client.py  test_filter_request_builder.py  test_filter_request_builder_integration.py  test_query_request_builder.py  test_request_builder.py
src/postgrest/tests/_sync/: client.py  conftest.py  test_client.py  test_filter_request_builder.py  test_filter_request_builder_integration.py  test_query_request_builder.py  test_request_builder.py
src/realtime/: CHANGELOG.md  Makefile  README.md  flake.nix  mod.just  pyproject.toml  release-please-config.json
src/realtime/infra/supabase/: config.toml
src/realtime/infra/supabase/migrations/: 20240810125543_init.sql
src/realtime/src/realtime/: CHANGELOG.md  __init__.py  exceptions.py  message.py  serializer.py  transformers.py  types.py  utils.py  version.py
src/realtime/src/realtime/_async/: channel.py  client.py  presence.py  push.py  timer.py
src/realtime/src/realtime/_sync/: channel.py  client.py  presence.py
src/realtime/tests/: test_channel.py  test_client.py  test_connection.py  test_http_send.py  test_issue_1209.py  test_presence.py  test_serializer.py  test_timer.py
src/storage/: CHANGELOG.md  MAINTAINERS.md  Makefile  README.md  pyproject.toml  run-unasync.py
src/storage/infra/supabase/: config.toml
src/storage/infra/supabase/migrations/: 20240513232811_bucket_rls_policies.sql
src/storage/src/storage/: CHANGELOG.md
src/storage/src/storage3/: __init__.py  analytics.py  client.py  exceptions.py  file_api.py  types.py  utils.py  vectors.py  version.py
src/storage/src/storage3/_async/: analytics.py  bucket.py  client.py  file_api.py  request.py  (+2 more)
src/storage/tests/: __init__.py  test_client.py  test_exceptions.py  test_utils.py  tests.env  utils.py
src/storage/tests/_async/: IMPLEMENTATION_SUMMARY.md  README.md  cleanup_buckets.py  conftest.py  test_bucket.py  test_client.py  test_vectors.py
src/storage/tests/_sync/: conftest.py  test_bucket.py  test_client.py
src/supabase/: CHANGELOG.md  Makefile  README.md  mod.just  pyproject.toml  run-unasync.py
src/supabase/src/supabase/: CHANGELOG.md  __init__.py  _utils.py  aiohttp.py  client.py  httpx.py  types.py  version.py
src/supabase/tests/: conftest.py  test_client_options.py  test_function_configuration.py  test_realtime.py  test_storage_url.py  test_utils_maybe_single.py  tests.env
src/supabase/tests/_async/: conftest.py  test_client.py
src/supabase/tests/_sync/: conftest.py  test_client.py
src/utils/: Makefile  pyproject.toml
src/utils/src/supabase_utils/: http.py  types.py
(+122 files in other folders)
