[tool.poetry]
name = "supabase"
version = "2.17.0" # {x-release-please-version}
description = "Supabase client for Python."
authors = ["Joel Lee <joel@joellee.org>", "Leon Fedden <leonfedden@gmail.com>", "Daniel Reinón García <danielreinon@outlook.com>", "Leynier Gutiérrez González <leynier41@gmail.com>", "Anand", "Andrew Smith <a.smith@silentworks.co.uk>"]
homepage = "https://github.com/supabase/supabase-py"
repository = "https://github.com/supabase/supabase-py"
documentation = "https://github.com/supabase/supabase-py"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.9"
postgrest = "1.1.1"
realtime = "2.6.0"
gotrue = "2.12.3"
storage3 = "0.12.0"
supafunc = "0.10.1"
httpx = ">=0.26,<0.29"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
commitizen = "^4.8.3"
python-dotenv = "^1.1.1"
unasync-cli = { git = "https://github.com/supabase-community/unasync-cli.git", branch = "main" }
pytest-asyncio = ">=0.24,<1.1"
ruff = "^0.12.1"

[tool.poetry.scripts]
tests = 'poetry_scripts:run_tests'

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
