[project]
name = "supabase"
version = "2.17.0" # {x-release-please-version}
description = "Supabase client for Python."
authors = [
  { name = "Joel Lee", email = "joel@joellee.org" },
  { name = "Leon Fedden", email = "leonfedden@gmail.com" },
  { name = "Daniel Reinón García", email = "danielreinon@outlook.com" },
  { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
  { name = "Anand" },
  { name = "Andrew Smith", email = "a.smith@silentworks.co.uk" },
]
homepage = "https://github.com/supabase/supabase-py"
repository = "https://github.com/supabase/supabase-py"
documentation = "https://github.com/supabase/supabase-py"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
  "postgrest >= 1.1.1",
  "realtime >= 2.6.0",
  "gotrue >= 2.12.3",
  "storage3 >= 0.12.0",
  "supafunc >= 0.10.1",
  "httpx >=0.26,<0.29",
]

[project.dependency-groups]
dev = [
  "pre-commit >= 4.1.0",
  "pytest >= 8.4.1",
  "pytest-cov >= 6.2.1",
  "commitizen >=4.8.3",
  "python-dotenv >= 1.1.1",
  "unasync-cli",
  "pytest-asyncio >=0.24,<1.1",
  "ruff >=0.12.1",
]

[project.scripts]
tests = 'cli_scripts:run_tests'

[tool.uv.sources]
unasync-cli = { git = "https://github.com/supabase-community/unasync-cli.git", branch = "main" }

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "supabase"
module-root = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
