[project]
name = "supabase_functions"
version = "2.22.0" # {x-release-please-version}
description = "Library for Supabase Functions"
authors = [
  { name = "Joel Lee", email = "joel@joellee.org" },
  { name = "Andrew Smith", email = "a.smith@silentworks.co.uk" },
]
maintainers = [
  { name = "Leonardo Santiago", email = "leonardo.santiago@supabase.io" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx[http2] >=0.26,<0.29",
  "strenum >=0.4.15",
  "yarl>=1.20.1",
]


[project.urls]
repository = "https://github.com/supabase/supabase-py"
homepage = "https://github.com/supabase/supabase/tree/main/src/functions"
changelog = "https://github.com/supabase/supabase-py/CHANGELOG.md"

[dependency-groups]
tests = [
  "pyjwt >=2.8.0",
  "pytest >=7.4.2,<9.0.0",
  "pytest-cov >=4,<7",
  "pytest-asyncio >=0.21.1,<1.2.0",
]
lints = [
  "unasync>=0.6.0",
  "ruff >=0.12.1",
  "python-lsp-server (>=1.12.2,<2.0.0)",
  "pylsp-mypy (>=0.7.0,<0.8.0)",
  "python-lsp-ruff (>=2.2.2,<3.0.0)",
]
dev = [{ include-group = "lints" }, {include-group = "tests" }]

[tool.uv]
default-groups = [ "dev" ]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "tests"
filterwarnings = [
    "ignore::DeprecationWarning", # ignore deprecation warnings globally
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
