[project]
name = "supabase"
version = "3.0.0a1" # {x-release-please-version}
description = "Supabase client for Python."
authors = [
  { name = "Joel Lee", email = "joel@joellee.org" },
  { name = "Leon Fedden", email = "leonfedden@gmail.com" },
  { name = "Daniel Reinón García", email = "danielreinon@outlook.com" },
  { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
  { name = "Anand" },
  { name = "Andrew Smith", email = "a.smith@silentworks.co.uk" },
]
maintainers = [
  { name = "Leonardo Santiago", email = "leonardo.santiago@supabase.io" }
]
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
  "realtime == 3.0.0a1", # x-release-please-version
  "supabase_functions == 3.0.0a1", # x-release-please-version
  "storage3 == 3.0.0a1", # x-release-please-version
  "supabase_auth == 3.0.0a1", # x-release-please-version
  "supabase_utils == 3.0.0a1", # x-release-please-version
  "postgrest == 3.0.0a1", # x-release-please-version
  "supabase_utils==3.0.0a1", # x-release-please-version
  "yarl>=1.22.0",
]

[project.urls]
homepage = "https://github.com/supabase/supabase-py"
repository = "https://github.com/supabase/supabase-py"
documentation = "https://github.com/supabase/supabase-py/src/supabase"
changelog = "https://github.com/supabase/supabase-py/tree/main/CHANGELOG.md"

[project.optional-dependencies]
httpx = ["supabase_utils[httpx]"]
aiohttp = ["supabase_utils[aiohttp]"]

[dependency-groups]
dev = [
  { include-group = "tests" },
  { include-group = "lints" },
]
tests = [
  "pytest >= 8.4.1",
  "pytest-cov >= 6.2.1",
  "pytest-asyncio >=0.24,<1.1",
  "python-dotenv >= 1.1.1",
  "mypy>=1.18.2",
  "supabase_utils[all]",
]
lints = [
  "unasync >=0.6.0",
  "ruff >=0.12.1",
]

[tool.uv]
default-groups = [ "dev" ]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
  "ANN2"
]
ignore = ["F403", "E501", "E402", "UP006", "UP035"]


[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
